--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ django-debug-toolbar==3.7.0
 django-smart-selects==1.6.0
 django-phonenumber-field[phonenumbers]==7.0.1
 python-telegram-bot==13.15
+telebot==0.0.5
